# MinecraftOfflineRender

./: Cargo.toml  README.md
mc-render/: Cargo.toml  face_rotate.py  gen_biomes.py
mc-render/src/: lib.rs
mc-render/src/assets/: biome.rs  blockstate.rs.cache  data_raw.rs  data_type.rs  math.rs  math.rs.cache  mod.rs  model.rs.cache  primary_type.rs  resource.rs  texture.rs.cache  util.rs
mc-render/src/glrender/: context.rs  mesh.rs  mod.rs  opengl-main.frag  opengl-main.vert  texture.rs
mc-render/src/model/: biome.rs  block.rs  blockstate.rs  mod.rs  model.rs
mc-render/src/render/: block.rs  mod.rs  model.rs  vulkan.rs
mc-render/src/vkrender/: mod.rs  render.rs  uuid.rs  vkrender.rs.cache
mc-render/src/vkrender/shader/: frag.glsl  mod.rs  solid.frag  solid.vert  vert.glsl
mc-render/tests/: playground.rs  test_deserialize.rs  test_gltexture.rs  test_mcdata.rs  test_model_render.rs  test_model_render.rs.cache  test_render_base.rs  torch.json
voxelmap-offline-render/: Cargo.toml
voxelmap-offline-render/src/: framework.rs  loader.rs  main.rs
