[package]
name = "mc-render"
version = "0.1.0"
authors = ["RDCarrot <yyt226univ2017@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
zip = { version = "^0.5", features = ["deflate-miniz"] }
image = "^0.22"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = "^0.7"
cgmath = "^0.17"
vulkano = "^0.16"