[package]
name = "voxelmap-offline-render"
version = "0.1.0"
authors = ["RDCarrot <yyt226univ2017@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-render = {path = "../mc-render"}
zip = { version = "^0.5", features = ["deflate-miniz"] }
image = "^0.22"
cgmath = "^0.17"
glium = "^0.25"
clap = "^2.33"